--- a/front-end/src/styles/pages/app.css
+++ b/front-end/src/styles/pages/app.css
@@ -2,53 +2,26 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  width: 100%;
 }
 
 .m-app-table {
-  margin-top: 3%;
-  width: 100%;
-  max-width: 1200px;
+  margin-top: 5%;
+  width: 50%;
   border-collapse: collapse;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  overflow: hidden;
 }
 
 .m-app-table th,
 .m-app-table td {
-  width: 100px;
-  min-width: 100px;
-  max-width: 100px;
-  padding: 12px;
+  padding: 8px;
   text-align: center;
-  border: 1px solid #ddd;
+  border: 1px solid rgb(36, 54, 174);
 }
 
 .m-app-table thead th {
-  background-color: #007bff;
-  color: white;
-  font-weight: bold;
+  background-color: #f2f2f2;
 }
 
 .m-app-table tbody td {
   background-color: #ffffff;
-  color: #333;
-}
-
-.m-app-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.m-app-table tbody tr:hover {
-  background-color: #e9ecef;
-}
-
-.m-app a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.m-app a:hover {
-  text-decoration: underline;
 }
